# osc-practice

./: .gitignore  CMakeLists.txt  Makefile  load_kernel.py  rpi_aarch64.cmake
bootloader/: init.S  linker.ld  main.c  utils.c
include/: config.h  cpio.h  exception.h  fdt.h  irq.h  mailbox.h  mini_uart.h  mm.h  pl011_uart.h  shell.h  timer.h  uart.h  utils.h
include/peripherals/: base.h  gpio.h  irq.h  mailbox.h  mini_uart.h  pl011_uart.h  power_management.h  timer.h  uart.h
lab0/: a.S
lab_notes/: lab0.md  lab1.md
shared/: uart.c  utils.c
src/: boot.S  cpio.c  entry.S  exception.c  fdt.c  init.S  irq.c  kernel_main.c  linker.ld  mailbox.c  main.c  mini_uart.c  mm.c  pl011_uart.c  reboot.c  shell.c  timer.c  uart.c  utils.S  utils.c
